syntax = "proto3";

package def.gateway;

option java_package = "com.commelina.math24.play.gateway.proto";
option java_outer_classname = "ErrorCodeProtos";
option java_multiple_files = true;

enum ERROR_CODE {
    DOMAIN_NOT_FOUND = 0;
}

